# flight-controller

./: .gitignore  CMakeLists.txt  README.md  sitl_main
docs/: pitch_output.csv
include/control/: pitch_angle_controller.hpp  pitch_rate_controller.hpp
sim/: input_profile.cpp  input_profile.hpp  plant.cpp  plant.hpp  sitl_main.cpp
src/control/: pitch_angle_controller.cpp  pitch_rate_controller.cpp
